--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -82,7 +82,8 @@
 
 		{%if fbuser %}
 		<!--<img id="facebook-feed-update" src="/simpz/site_media/images/facebook-invite.png">-->
-		<div id="facebook-div-feed-update"><button id="facebook-feed-update">UPDATE FACEBOOK FEED</button></div>
+		<div id="facebook-div-back"><img src="/simpz/site_media/images/back.png" id="facebook-back"></div>
+		<div id="facebook-div-feed-update"><img src="/simpz/site_media/images/facebook-invite.png" id="facebook-feed-update"></div>
 		{% endif %}
 	</div>
 	<div id="overlay-div-content2-twitter" >
@@ -94,7 +95,8 @@
 		<BR /><BR />
 		TWIITER LALA
 		<textarea id="overlay-textarea" >Great Event, Come with me. {{invite_url}}</textarea>
-
+		
+		<div id="twitter-div-back"><img src="/simpz/site_media/images/back.png" id="twitter-back"></div>
 		<div id="twitter-div-feed-update"><button id="twitter-feed-update">UPDATE TWITTER FEED!</button></div>
 	</div>
 	<div id="overlay-div-content3" >
@@ -106,7 +108,7 @@
 		<BR /><BR />
 
          
-		<h1>THANKS YOU: Dicount Code Is KAJSDKASDKA</h1>
+		<h1>THANKS YOU: Discount Code Is KAJSDKASDKA</h1>
 
 		<button id="okay">Okay!</button> 
 	</div>
