tidying up overlay ui & adding new buttons

--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -76,13 +76,14 @@
 
 		</div>
 		<div class="overlay-bot"></div>
-		<BR /><BR />
-		FACEBOOK
+		<div id="twitter-top-msg">Share with Facebook Followers</div>
+
 		<textarea id="overlay-textarea" >Great Event, Come with me. {{invite_url}}</textarea>
 
 		{%if fbuser %}
 		<!--<img id="facebook-feed-update" src="/simpz/site_media/images/facebook-invite.png">-->
-		<div id="facebook-div-back"><img src="/simpz/site_media/images/back.png" id="facebook-back"></div>
+		<!--FB Back Button-->
+		<!--<div id="facebook-div-back"><img src="/simpz/site_media/images/back.png" id="facebook-back"></div>-->
 		<div id="facebook-div-feed-update"><img src="/simpz/site_media/images/facebook-invite.png" id="facebook-feed-update"></div>
 		{% endif %}
 	</div>
@@ -92,12 +93,11 @@
 
 		</div>
 		<div class="overlay-bot"></div>
-		<BR /><BR />
-		TWIITER LALA
+		<div id="twitter-top-msg">Share with Twitter Followers</div>
 		<textarea id="overlay-textarea" >Great Event, Come with me. {{invite_url}}</textarea>
-		
-		<div id="twitter-div-back"><img src="/simpz/site_media/images/back.png" id="twitter-back"></div>
-		<div id="twitter-div-feed-update"><button id="twitter-feed-update">UPDATE TWITTER FEED!</button></div>
+		<!--Twitter Back Button-->
+		<!--<div id="twitter-div-back"><img src="/simpz/site_media/images/back.png" id="twitter-back"></div>-->
+		<div id="twitter-div-feed-update"><img src="/simpz/site_media/images/twitter-invite.png" id="twitter-feed-update"></div>
 	</div>
 	<div id="overlay-div-content3" >
 
@@ -108,7 +108,7 @@
 		<BR /><BR />
 
          
-		<h1>THANKS YOU: Discount Code Is KAJSDKASDKA</h1>
+		<h1>Thank you for sharing. Your discount code is KAJSDKASDKA</h1>
 
 		<button id="okay">Okay!</button> 
 	</div>
