fixing sticky footer & formating

--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -127,7 +127,7 @@
 			Darren Rowse, Problogger.com<br>
 			Jeremy Shoemaker, ShoeMoney.com<br>
 			Brian Clark, Copyblogger.com<br>
-			Zac Johnson, ZacJohnson.com<br>
+			Zac Johnson, ZacJohnson.com
 		</p>
 		<div id="blogworld"><img src="/simpz/site_media/images/blogworld.png"></div>
 	</div>
