--- a/simpz/templates/event_base.html
+++ b/simpz/templates/event_base.html
@@ -23,7 +23,7 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-<div class="wrapper">
+<div class="wrap">
 	<div id="main">
 		<div id="header">		
 			<div id ="fuck">
@@ -41,7 +41,6 @@
 		<!-- END header -->
 	</div>
 	<!-- END main -->
- 	<div class="push"></div>
 </div> 	
   <!-- Footer content -->
       {% include "footer.html" %}							
