fb/twitter login buttons

--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -51,7 +51,7 @@
 			<br/>
 			<a class="logoutnow" href="#">logout from facebook</a>
 			{% else %}
-			<a href="#"><img id="facebook-login" src="/simpz/site_media/images/Facebook-Button.png"/></a>
+			<a href="#"><img id="facebook-login" src="/simpz/site_media/images/facebook-button.png"/></a>
 			{% endif %}
 
 		</div>
@@ -64,7 +64,7 @@
 			<br/>
 			<a href="/simpz/logout/?redirectArgs=overlayEQUALStrue">logout from twitter</a>
 			{% else %}
-			<a href="/simpz/login/?redirectArgs=overlayEQUALStrue"><img id="twitter-login" src="/simpz/site_media/images/twitter_button_5_lo.gif/" /></a><br/><br/>
+			<a href="/simpz/login/?redirectArgs=overlayEQUALStrue"><img id="twitter-login" src="/simpz/site_media/images/twitter-button.png" /></a><br/><br/>
 			{% endif %}
 		</div>
 
