--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -33,10 +33,13 @@
 <div id="overlay-blogger-login" class="overlay-blogger">
 
 	<div id="overlay-div-content1">
-		<div class="overlay-top"><img src="/simpz/site_media/images/sharetxt.png">  
-
+		<div class="overlay-top">
+			<img src="/simpz/site_media/images/sharetxt.png">
 		</div>
-		<div class="overlay-bot"></div>
+		<div class="overlay-bot">
+			<div id="previous-grey"><img src="/simpz/site_media/images/previous-grey.png"></div>
+			<div id="invite-progress"><ul><li class="active">Select Network</li> <li>Message</li> <li>Discount</li></div>
+		</div>
 		<BR /><BR />
 
 		<div id="overlay-div-facebook-login">
@@ -71,46 +74,57 @@
 	</div>
 
 	<div id="overlay-div-content2-facebook" >
-
-		<div class="overlay-top"><img src="/simpz/site_media/images/sharetxt.png">  
-
+		<div class="overlay-top">
+			<img src="/simpz/site_media/images/sharetxt.png">
 		</div>
-		<div class="overlay-bot"></div>
-		<div id="twitter-top-msg">Share with Facebook Followers</div>
-
-		<textarea id="overlay-textarea" >Great Event, Come with me. {{invite_url}}</textarea>
-
-		{%if fbuser %}
-		<!--<img id="facebook-feed-update" src="/simpz/site_media/images/facebook-invite.png">-->
-		<!--FB Back Button-->
-		<!--<div id="facebook-div-back"><img src="/simpz/site_media/images/back.png" id="facebook-back"></div>-->
-		<div id="facebook-div-feed-update"><img src="/simpz/site_media/images/facebook-invite.png" id="facebook-feed-update"></div>
+		<div class="overlay-bot">
+			<div id="previous"><img src="/simpz/site_media/images/previous.png"></div>
+			<div id="invite-progress"><ul><li>Select Network</li> <li class="active">Message</li> <li>Discount</li></div>
+					{%if fbuser %}
+			<!--<img id="facebook-feed-update" src="/simpz/site_media/images/facebook-invite.png">-->
+			<!--FB Back Button-->
+			<!--<div id="facebook-div-back"><img src="/simpz/site_media/images/back.png" id="facebook-back"></div>-->
+			<div id="facebook-div-feed-update"><img src="/simpz/site_media/images/share.png" id="facebook-feed-update"></div>
 		{% endif %}
-	</div>
-	<div id="overlay-div-content2-twitter" >
-
-		<div class="overlay-top"><img src="/simpz/site_media/images/sharetxt.png">  
-
 		</div>
-		<div class="overlay-bot"></div>
-		<div id="twitter-top-msg">Share with Twitter Followers</div>
+		<div id="facebook-top-msg">
+			<img src="/simpz/site_media/images/facebook-share-msg.png">
+		</div>
+		<textarea id="overlay-textarea" >Come check out this conference with me! {{invite_url}}</textarea>
+	</div>
+	
+	<div id="overlay-div-content2-twitter">
+		<div class="overlay-top">
+			<img src="/simpz/site_media/images/sharetxt.png">  
+		</div>
+		<div class="overlay-bot">
+			<div id="previous"><img src="/simpz/site_media/images/previous.png"></div>
+			<div id="invite-progress"><ul><li>Select Network</li> <li class="active">Message</li> <li>Discount</li></div>
+			<div id="twitter-div-feed-update"><img src="/simpz/site_media/images/share.png" id="twitter-feed-update"></div>
+		</div>
+		<div id="twitter-top-msg">
+			<img src="/simpz/site_media/images/twitter-share-msg.png">
+		</div>
 		<textarea id="overlay-textarea" >Great Event, Come with me. {{invite_url}}</textarea>
-		<!--Twitter Back Button-->
-		<!--<div id="twitter-div-back"><img src="/simpz/site_media/images/back.png" id="twitter-back"></div>-->
-		<div id="twitter-div-feed-update"><img src="/simpz/site_media/images/twitter-invite.png" id="twitter-feed-update"></div>
 	</div>
 	<div id="overlay-div-content3" >
 
 		<div class="overlay-top"><img src="/simpz/site_media/images/sharetxt.png">  
 
 		</div>
-		<div class="overlay-bot"></div>
-		<BR /><BR />
+		<div class="overlay-bot">
+			<div id="previous">
+				<img src="/simpz/site_media/images/previous.png">
+			</div>
+			<div id="invite-progress"><ul><li>Select Network</li> <li>Message</li> <li class="active">Discount</li></div>
+			<div id="okay"><img src="/simpz/site_media/images/done.png"></div>
+		</div>
+		
+			<BR /><BR />
+			<div id="code-msg">Thanks! You've shared your discount with your friends.			<BR>
+			<BR>
+			Here’s your discount code:</div>       	<div id="code"><p>blahblah</p></div>
 
-         
-		<h1>Thank you for sharing. Your discount code is KAJSDKASDKA</h1>
-
-		<button id="okay">Okay!</button> 
 	</div>
 
 </div>
