--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -183,6 +183,7 @@
 
 
 $(document).ready(function() {
+        var contentView = 0;
 	$("#invite_button").overlay(
 		{
 			expose: {
@@ -193,6 +194,7 @@ $(document).ready(function() {
 			onLoad: function(event) {
 				// show first view with facebook and twitter login buttons
 				{% if not user and not fbuser %}
+                                    contentView = 1;
 				    $('#overlay-div-content1').show(); 
 				    $('#overlay-div-content2-facebook').hide(); 
 				    $('#overlay-div-content2-twitter').hide();
@@ -201,6 +203,7 @@ $(document).ready(function() {
                                 
                                 // if twitter user logged in, show twitter page
                                 {% if user %}
+                                    contentView = 2;
 				    $('#overlay-div-content1').hide(); 
 			            $('#overlay-div-content2-facebook').hide(); 
 				    $('#overlay-div-content2-twitter').show();
@@ -209,6 +212,7 @@ $(document).ready(function() {
 
                                 // if fbuser logged in
                                 {% if fbuser %}
+                                    contentView = 2;
 				    $('#overlay-div-content1').hide(); 
 			            $('#overlay-div-content2-facebook').show(); 
 			            $('#overlay-div-content2-twitter').hide();
@@ -216,17 +220,41 @@ $(document).ready(function() {
 				{% endif %}
 				{% endif %}
   		                {% endif %}
-				
 			},
 			top: 200,
 			left: 200,
 		});
 
                 $('#previous').click(function(){
-                                    $('#overlay-div-content1').show();  
-				    $('#overlay-div-content2-facebook').hide(); 
-				    $('#overlay-div-content2-twitter').hide();
-				    $('#overlay-div-content3').hide();
+                                    if (contentView == 2){
+                               
+                                        contentView = 1;
+                                        $('#overlay-div-content1').show();  
+				        $('#overlay-div-content2-facebook').hide(); 
+				        $('#overlay-div-content2-twitter').hide();
+				        $('#overlay-div-content3').hide();
+                                        
+                                    }
+                                    else if (contentView == 3) {
+                               {% if user %}
+                                    contentView = 2;
+				    $('#overlay-div-content1').hide(); 
+			            $('#overlay-div-content2-facebook').hide(); 
+				    $('#overlay-div-content2-twitter').show();
+			            $('#overlay-div-content3').hide();
+				{% else %} 	
+
+                                // if fbuser logged in
+                                {% if fbuser %}
+                                    contentView = 3;
+				    $('#overlay-div-content1').hide(); 
+			            $('#overlay-div-content2-facebook').show(); 
+			            $('#overlay-div-content2-twitter').hide();
+			            $('#overlay-div-content3').hide();	
+				{% endif %}
+				{% endif %}
+                                    }
+alert("boom");
                 });
 
 		{% if overlay %}
@@ -266,6 +294,7 @@ $(document).ready(function() {
 		});
 
 		$("#twitter-feed-update").click(function(){
+                        contentView = 3;
 			$('#overlay-div-content1').hide(); 
 			$('#overlay-div-content2-facebook').hide();	 
 			$('#overlay-div-content2-twitter').hide();
@@ -288,6 +317,7 @@ $(document).ready(function() {
 	});
 
 	$("#facebook-feed-update").click(function(){
+                contentView = 3;
 		$('#overlay-div-content1').hide(); 
 		$('#overlay-div-content2-facebook').hide();	 
 		$('#overlay-div-content2-twitter').hide();
@@ -348,7 +378,6 @@ $(document).ready(function() {
 		});
 	});
 
-
 	$("#invite_popup_close").bind('click', function() {
 		$('#invite_popup').hide();
 		$('#tweet_msg').html("");
@@ -388,7 +417,8 @@ $(document).ready(function() {
 			$("#tweet_msg").html("<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />Sending Tweet<img width='20' height='20' src='/simpz/site_media/images/ajax-loader.gif' />");
 		}
 	});
-});
+
+     });
 
 
 $('#invite_dm_button').click(function() {
