--- a/simpz/templates/blogvip_flow.html
+++ b/simpz/templates/blogvip_flow.html
@@ -1,7 +1,7 @@
 {% extends "event_base.html" %}
 
 {% block  js_css_include %}
-<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{map_key}}" type="text/javascript" > </script> 
+<!--<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{map_key}}" type="text/javascript" > </script> -->
 <script type="text/javascript" src="/simpz/site_media/jquery.cookie.js" ></script>
 <link rel="stylesheet" href="/simpz/site_media/overlay.css" type="text/css" >
 {% endblock %}
@@ -465,41 +465,41 @@ $('#invite_dm_button').click(function() {
 });
   
 
-$("#visual_map").hide();
-$("#show_map").html("(Show Map)");
-
-
-if (GBrowserIsCompatible()) {
-	var map = new GMap2(document.getElementById("visual_map"));
-	map.setCenter(new GLatLng({{event.lat}}, {{event.lng}}), 13);
-	map.setUIToDefault();
-}			
-
-
-$("#show_map").click(function() {
-
-	if ($("#visual_img").is(":visible")) {
-
-		$("#visual_img").hide(500);
-
-		$("#visual_map").show(500, function() {
-
-			if (GBrowserIsCompatible()) {
-				var map = new GMap2(document.getElementById("visual_map"));
-				map.setCenter(new GLatLng({{event.lat}}, {{event.lng}}), 13);
-				map.setUIToDefault();
-			}
-		});
-
-
-		$("#show_map").html("(Hide Map)");
-	}else {
-		$("#visual_img").show(500);
-		$("#visual_map").hide(500);
-		$("#show_map").html("(Show Map)");
-	}
-});
-});
+//$("#visual_map").hide();
+//$("#show_map").html("(Show Map)");
+//
+//
+//if (GBrowserIsCompatible()) {
+//	var map = new GMap2(document.getElementById("visual_map"));
+//	map.setCenter(new GLatLng({{event.lat}}, {{event.lng}}), 13);
+//	map.setUIToDefault();
+//}			
+//
+//
+//$("#show_map").click(function() {
+//
+//	if ($("#visual_img").is(":visible")) {
+//
+//		$("#visual_img").hide(500);
+//
+//		$("#visual_map").show(500, function() {
+//
+//			if (GBrowserIsCompatible()) {
+//				var map = new GMap2(document.getElementById("visual_map"));
+//				map.setCenter(new GLatLng({{event.lat}}, {{event.lng}}), 13);
+//				map.setUIToDefault();
+//			}
+//		});
+//
+//
+//		$("#show_map").html("(Hide Map)");
+//	}else {
+//		$("#visual_img").show(500);
+//		$("#visual_map").hide(500);
+//		$("#show_map").html("(Show Map)");
+//	}
+//});
+//});
 
 // perform JavaScript after the document is scriptable.
 $(function() {
